added color keys

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
         </fieldset>
     </div>
     <canvas id="display" ></canvas>
+    <fieldset>
+        <legend>Color Key</legend>
+        <label class="tooltip">
+            Start
+            <span class="tooltip-child">The starting tile</span>
+        </label>
+        <input id="start-color" type="color">
+        <br>
+        <label>Start</label>
+        <input id="start-color" type="color">
+        <br>
+        <label>Start</label>
+        <input id="start-color" type="color">
+        <br>
+        <label>Start</label>
+        <input id="start-color" type="color">
+        <br>
+    </fieldset>
 
     <!-- classes -->
     <script src="src/classes/aStar.js"></script>
