improved tool tip fading in on hover

--- a/index.html
+++ b/index.html
@@ -39,13 +39,40 @@
         </label>
         <input id="start-color" type="color">
         <br>
-        <label>Start</label>
+        <label class="tooltip">
+            Goal
+            <span class="tooltip-child">The starting tile</span>
+        </label>
         <input id="start-color" type="color">
         <br>
-        <label>Start</label>
+        <label class="tooltip">
+            Wall
+            <span class="tooltip-child">The starting tile</span>
+        </label>
         <input id="start-color" type="color">
         <br>
-        <label>Start</label>
+        <label class="tooltip">
+            Path
+            <span class="tooltip-child">The starting tile</span>
+        </label>
+        <input id="start-color" type="color">
+        <br>
+        <label class="tooltip">
+            Start
+            <span class="tooltip-child">The starting tile</span>
+        </label>
+        <input id="start-color" type="color">
+        <br>
+        <label class="tooltip">
+            Open
+            <span class="tooltip-child">The starting tile</span>
+        </label>
+        <input id="start-color" type="color">
+        <br>
+        <label class="tooltip">
+            Closed
+            <span class="tooltip-child">The starting tile</span>
+        </label>
         <input id="start-color" type="color">
         <br>
     </fieldset>
