adding tooltips to all color keys

--- a/index.html
+++ b/index.html
@@ -41,39 +41,45 @@
         <br>
         <label class="tooltip">
             Goal
-            <span class="tooltip-child">The starting tile</span>
+            <span class="tooltip-child">Tile that is being searched for</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="goal-color" type="color">
         <br>
         <label class="tooltip">
             Wall
-            <span class="tooltip-child">The starting tile</span>
+            <span class="tooltip-child">Tiles that can't be passed</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="wall-color" type="color">
+        <br>
+        <label class="tooltip">
+            Floor
+            <span class="tooltip-child">Tiles that can be passed</span>
+        </label>
+        <input id="floor-color" type="color">
         <br>
         <label class="tooltip">
             Path
             <span class="tooltip-child">The starting tile</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="path-color" type="color">
         <br>
         <label class="tooltip">
-            Start
-            <span class="tooltip-child">The starting tile</span>
+            Current
+            <span class="tooltip-child">The current path being checked</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="current-color" type="color">
         <br>
         <label class="tooltip">
             Open
-            <span class="tooltip-child">The starting tile</span>
+            <span class="tooltip-child">Tiles next to be checked</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="open-color" type="color">
         <br>
         <label class="tooltip">
             Closed
-            <span class="tooltip-child">The starting tile</span>
+            <span class="tooltip-child">Tiles already checked</span>
         </label>
-        <input id="start-color" type="color">
+        <input id="closed-color" type="color">
         <br>
     </fieldset>
 
